# aplwin-sf

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: empty.sf  high_minus.sf  mixed.sf  multi.sf  simple.sf  symbols.sf
src/aplwin_sf/: __init__.py  cli.py  encoding.py  parser.py
tests/: make_fixtures.py  test_encoding.py  test_parser.py
