[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aplwin-sf"
version = "0.1.0"
description = "Read APL+Win component files (.sf) from Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Andy Reagan" }]
keywords = ["apl", "aplwin", "component-file", "parser", "legacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving",
]

[project.scripts]
aplwin-sf = "aplwin_sf.cli:main"

[project.urls]
Repository = "https://github.com/andyreagan/aplwin-sf"

[tool.pytest.ini_options]
testpaths = ["tests"]
