[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aplwin-sf"
version = "0.1.1"
description = "Read APL+Win component files (.sf) from Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andy Reagan" }]
keywords = ["apl", "aplwin", "component-file", "parser", "legacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving",
]

[project.scripts]
aplwin-sf = "aplwin_sf.cli:main"

[project.urls]
Homepage = "https://github.com/andyreagan/aplwin-sf"
Repository = "https://github.com/andyreagan/aplwin-sf"
Issues = "https://github.com/andyreagan/aplwin-sf/issues"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
